Adding permissions according to routes resources