@@ -16,25 +16,153 @@ import static com.ebanking.IdentityProvider.user.Permission.*;
 @RequiredArgsConstructor
 public enum Role {
 
-  WALLET(Collections.emptySet()),
+  WALLET(
+          Set.of(
+                  // Transfer Permissions
+                  TRANSFER_INITIATE,
+                  TRANSFER_SERVE,
+                  TRANSFER_READ,
+                  TRANSFER_UPDATE,
+                  TRANSFER_BLOCK,
+                  TRANSFER_UNBLOCK,
+                  TRANSFER_DOWNLOAD_PDF,
+                  TRANSFER_RESTITUTE,
+                  TRANSFER_HISTORY_READ,
+
+                  //Notifications Permissions
+                  SMS_SEND,
+                  IDENTITY_VERIFY,
+
+                  //Clients Permissions
+                  CLIENT_CHECK_STATUS_BY_CIN,
+                  CLIENT_CHECK_STATUS_BY_RIB,
+                  CLIENT_ADD_TO_BLACKLIST_BY_CIN,
+                  CLIENT_ADD_TO_BLACKLIST_BY_RIB,
+                  CLIENT_ADD_PROSPECTIVE,
+                  CLIENT_GET_ALL_TRANSFERS,
+                  CLIENT_MARK_TRANSFER_SERVED,
+                  CLIENT_UPDATE_KYC,
+                  CLIENT_ADD_KYC,
+                  CLIENT_CHECK_KYC_EXPIRATION,
+                  CLIENT_GET_CUSTOMER_BY_ID,
+                  CLIENT_GET_WALLET_BY_ID,
+                  CLIENT_ADD_BENEFICIARY,
+                  CLIENT_GET_BENEFICIARIES,
+                  CLIENT_GET_BENEFICIARY_BY_ID,
+                  CLIENT_UPDATE_TRANSFER_ID_IN_BENEFICIARY,
+                  CLIENT_UPDATE_WALLET_BALANCE,
+                  CLIENT_UPDATE_CUSTOMER_TO_CUSTOMER_ID,
+                  CLIENT_GET_ALL_CUSTOMERS_BY_CUSTOMER_TO_CUSTOMER_ID,
+                  CLIENT_CHECK_CUSTOMER_SIRONE_STATUS,
+                  CLIENT_CHECK_CUSTOMER_SIRONE_STATUS_BY_RIB,
+                  CLIENT_SEND_OTP,
+                  CLIENT_FIND_KYC,
+                  CLIENT_GET_ALL_KYC,
+                  CLIENT_GET_KYC_BY_ID,
+                  CLIENT_GET_WALLET_BY_WALLET_ID,
+                  CLIENT_GET_BENEFICIARY_BY_TRANSFER_ID,
+                  CLIENT_GET_CUSTOMER_BY_ID_NUMBER,
+                  CLIENT_TEST
+
+          )
+  ),
   BACK_OFFICE(
           Set.of(
-                  BACK_OFFICE_READ,
-                  BACK_OFFICE_UPDATE,
-                  BACK_OFFICE_DELETE,
-                  BACK_OFFICE_CREATE
-          )
+                  // Transfer Permissions
+                  TRANSFER_INITIATE,
+                  TRANSFER_SERVE,
+                  TRANSFER_READ,
+                  TRANSFER_UPDATE,
+                  TRANSFER_BLOCK,
+                  TRANSFER_UNBLOCK,
+                  TRANSFER_DOWNLOAD_PDF,
+                  TRANSFER_RESTITUTE,
+                  TRANSFER_HISTORY_READ,
+
+                  //Notifications Permissions
+                  SMS_SEND,
+                  IDENTITY_VERIFY,
+
+                  //Clients Permissions
+                  CLIENT_CHECK_STATUS_BY_CIN,
+                  CLIENT_CHECK_STATUS_BY_RIB,
+                  CLIENT_ADD_TO_BLACKLIST_BY_CIN,
+                  CLIENT_ADD_TO_BLACKLIST_BY_RIB,
+                  CLIENT_ADD_PROSPECTIVE,
+                  CLIENT_GET_ALL_TRANSFERS,
+                  CLIENT_MARK_TRANSFER_SERVED,
+                  CLIENT_UPDATE_KYC,
+                  CLIENT_ADD_KYC,
+                  CLIENT_CHECK_KYC_EXPIRATION,
+                  CLIENT_GET_CUSTOMER_BY_ID,
+                  CLIENT_GET_WALLET_BY_ID,
+                  CLIENT_ADD_BENEFICIARY,
+                  CLIENT_GET_BENEFICIARIES,
+                  CLIENT_GET_BENEFICIARY_BY_ID,
+                  CLIENT_UPDATE_TRANSFER_ID_IN_BENEFICIARY,
+                  CLIENT_UPDATE_WALLET_BALANCE,
+                  CLIENT_UPDATE_CUSTOMER_TO_CUSTOMER_ID,
+                  CLIENT_GET_ALL_CUSTOMERS_BY_CUSTOMER_TO_CUSTOMER_ID,
+                  CLIENT_CHECK_CUSTOMER_SIRONE_STATUS,
+                  CLIENT_CHECK_CUSTOMER_SIRONE_STATUS_BY_RIB,
+                  CLIENT_SEND_OTP,
+                  CLIENT_FIND_KYC,
+                  CLIENT_GET_ALL_KYC,
+                  CLIENT_GET_KYC_BY_ID,
+                  CLIENT_GET_WALLET_BY_WALLET_ID,
+                  CLIENT_GET_BENEFICIARY_BY_TRANSFER_ID,
+                  CLIENT_GET_CUSTOMER_BY_ID_NUMBER,
+                  CLIENT_TEST
+                  )
   ),
   AGENT(
           Set.of(
-                  BACK_OFFICE_READ,
-                  BACK_OFFICE_UPDATE,
-                  BACK_OFFICE_DELETE,
-                  BACK_OFFICE_CREATE,
-                  AGENT_READ,
-                  AGENT_UPDATE,
-                  AGENT_DELETE,
-                  AGENT_CREATE
+                  // Transfer Permissions
+                  TRANSFER_INITIATE,
+                  TRANSFER_SERVE,
+                  TRANSFER_READ,
+                  TRANSFER_UPDATE,
+                  TRANSFER_BLOCK,
+                  TRANSFER_UNBLOCK,
+                  TRANSFER_DOWNLOAD_PDF,
+                  TRANSFER_RESTITUTE,
+                  TRANSFER_HISTORY_READ,
+
+                  //Notifications Permissions
+                  SMS_SEND,
+                  IDENTITY_VERIFY,
+
+                  //Clients Permissions
+                  CLIENT_CHECK_STATUS_BY_CIN,
+                  CLIENT_CHECK_STATUS_BY_RIB,
+                  CLIENT_ADD_TO_BLACKLIST_BY_CIN,
+                  CLIENT_ADD_TO_BLACKLIST_BY_RIB,
+                  CLIENT_ADD_PROSPECTIVE,
+                  CLIENT_GET_ALL_TRANSFERS,
+                  CLIENT_MARK_TRANSFER_SERVED,
+                  CLIENT_UPDATE_KYC,
+                  CLIENT_ADD_KYC,
+                  CLIENT_CHECK_KYC_EXPIRATION,
+                  CLIENT_GET_CUSTOMER_BY_ID,
+                  CLIENT_GET_WALLET_BY_ID,
+                  CLIENT_ADD_BENEFICIARY,
+                  CLIENT_GET_BENEFICIARIES,
+                  CLIENT_GET_BENEFICIARY_BY_ID,
+                  CLIENT_UPDATE_TRANSFER_ID_IN_BENEFICIARY,
+                  CLIENT_UPDATE_WALLET_BALANCE,
+                  CLIENT_UPDATE_CUSTOMER_TO_CUSTOMER_ID,
+                  CLIENT_GET_ALL_CUSTOMERS_BY_CUSTOMER_TO_CUSTOMER_ID,
+                  CLIENT_CHECK_CUSTOMER_SIRONE_STATUS,
+                  CLIENT_CHECK_CUSTOMER_SIRONE_STATUS_BY_RIB,
+                  CLIENT_SEND_OTP,
+                  CLIENT_FIND_KYC,
+                  CLIENT_GET_ALL_KYC,
+                  CLIENT_GET_KYC_BY_ID,
+                  CLIENT_GET_WALLET_BY_WALLET_ID,
+                  CLIENT_GET_BENEFICIARY_BY_TRANSFER_ID,
+                  CLIENT_GET_CUSTOMER_BY_ID_NUMBER,
+                  CLIENT_TEST
+
           )
   )
 
